# SEKURO_TUGAS_1_MochamadFachriAlfaridzi_PROGRAMMING

src/cmake_soal/: CMakeLists.txt  command.txt
src/cmake_soal/include/: robot.hpp  robotair.hpp
src/cmake_soal/src/: main.cpp  robot.cpp  robotair.cpp
src/oop_soal_1/: core_mcu.cpp  core_mcu.hpp  main.cpp
src/oop_soal_1_alternatif/: main.cpp  mobil.cpp  mobil.hpp
src/oop_soal_2_bonus/: main.cpp  mcu.cpp  mcu.hpp  mcu_cam_controller.cpp  mcu_cam_controller.hpp  mcu_walker.cpp  mcu_walker.hpp
src/ros_soal_1/ros2_ws/src/simple_chat/: package.xml  setup.cfg  setup.py
src/ros_soal_1/ros2_ws/src/simple_chat/simple_chat/: publisher_node.py  subscriber_node.py
src/ros_soal_2/: penjelasan_ros2.md  script_video.txt
src/stl_soal/: main.cpp
