<?xml version="1.0"?>
<package format="3">
  <name>simple_chat</name>
  <version>0.0.1</version>
  <description>Simple ROS2 publisher subscriber package</description>
  <maintainer email="cakru@example.com">cakru</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
